feat: basic fidelity bonds (#307)
* dev: add simple fidelity bond screen in advanced mode

* dev: add link to fidelity form page in CurrentWalletAdvanced

* dev: fix build errors and remove 'as' tag of translation elements

* refactor: move FidelityBondAdvanced component to own file

* ui: highlight expiry date of fidelity bond address

* dev: display Fidelity Bond create form regardless if FBs already exist

* dev: avoid flickering when loading new fb address

* fix: rename Locktime to Lockdate

* dev: add translation strings to section 'global'

* wip: FidelityBondSimple

* review: distinct simple and dev mode Fidelity Bond screens

* review: fix dev FB view in dark mode

* refactor: rename FidelityBondAdvanced to FidelityBondDevOnly

* dev: add link to default view to FidelityBondDevOnly

* dev: sort utxo by value

* dev: reset user confirmation on data change

* dev: create fidelity bond with collaborative transaction WIP

* dev: wait for collaborative transaction to finish

* dev: unfreeze utxos after creating sweep tx

* review: render whitespace only when necessary in FB alert

* review: do not provide time related values to Date.UTC for FB

* Update src/components/FidelityBondDevOnly.tsx

Co-authored-by: Daniel <10026790+dnlggr@users.noreply.github.com>

* review: do not duplicate 'initialLockdate' values

* dev: allow lockdates in the past in dev mode

* dev: display percentage of utxo to total value in account

* dev: style percentage bar

* dev: display percentage bar in account selector

* dev: i18n for 'time elapsed' phrase

* dev: externalize components UtxoSelector and UtxoCheckbox

* dev: externalize components AccountSelector and AccountCheckbox

* dev: externalize LockdateForm

* dev: externalize FidelityBondDetailsSetupForm

* dev: display all accounts by default in FB form

* refactor: remove unused vars and imports

* dev: fix comments and add todos

* dev: minimal i18n for 

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -1,7 +1,14 @@
 {
   "global": {
+    "loading": "Loading",
+    "button_copy_text": "Copy",
+    "button_copy_text_confirmed": "Copied",
+    "next": "Next",
     "back": "Back",
     "close": "Close"
+  },
+  "app": {
+    "alert_no_connection": "No connection to backend: {{ connectionError }}"
   },
   "navbar": {
     "title": "Jam",
@@ -12,9 +19,6 @@
     "joining_in_progress": "Joining",
     "menu_mobile": "Menu",
     "menu_mobile_settings": "Settings"
-  },
-  "app": {
-    "alert_no_connection": "No connection to backend: {{ connectionError }}"
   },
   "footer": {
     "warning": "This is beta software.<br /><1>Read this before using.</1>",
@@ -270,6 +274,17 @@
     "item_last": {
       "title": "Go to step one and repeat.",
       "description": "Still confused? Dig into the <2>documentation</2>."
+    }
+  },
+  "fidelity_bond": {
+    "title": "Fidelity Bonds (Experimental)",
+    "subtitle": "Fidelity Bonds prevent Sybil attacks by deliberately increasing the cost of creating cryptographic identities. Creating a fidelity bond will increase your chances of being picked for a collaborative transaction.",
+    "text_maker_running": "Earn is active. Stop the service in order to create a Fidelity Bond.",
+    "text_coinjoin_already_running": "A collaborative transaction is currently in progress.",
+    "create_form": {
+      "confirmation_toggle_title": "I have reviewed my inputs carefully",
+      "confirmation_toggle_subtitle": "I understand that the locked funds will be inaccessible for the given duration",
+      "button_create": "Create Fidelity Bond"
     }
   },
   "scheduler": {
