feat: add destination jar selector

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -183,11 +183,11 @@
     "text_maker_running": "Earn is active. Stop the service in order to send collaborative transactions.",
     "text_coinjoin_already_running": "A collaborative transaction is currently in progress.",
     "label_recipient": "Recipient",
-    "placeholder_recipient": "Enter address...",
+    "placeholder_recipient": "Enter address or choose jar from wallet...",
     "feedback_invalid_recipient": "Please provide a recipient address.",
-    "label_account": "Privacy level to send from",
+    "label_account": "Send from",
     "label_account_dev_mode": "Account to send from",
-    "account_selector_option": "Privacy Level {{ number }}",
+    "account_selector_option": "Jar {{ number }}",
     "account_selector_option_dev_mode": "Account {{ number }}",
     "label_amount": "Amount in sats",
     "placeholder_amount": "Enter amount...",
