--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -218,7 +218,7 @@
     "error_copy_address_failed": "Could not copy address.",
     "button_copy_address": "Copy",
     "text_copy_address_confirmed": "Copied",
-    "button_settings": "Advanced",
+    "button_settings": "More options",
     "label_amount": "Amount to request in sats",
     "feedback_invalid_amount": "Please provide a valid amount.",
     "button_new_address": "Get new address",
@@ -235,7 +235,7 @@
     "alert_stopping": "Service is stopping.",
     "alert_running": "Earning sats...",
     "alert_coinjoin_in_progress": "A collaborative transaction is currently in progress.",
-    "button_settings": "Advanced",
+    "button_settings": "More options",
     "radio_abs_offer_label": "Absolute offer",
     "radio_rel_offer_label": "Relative offer",
     "label_rel_fee": "Relative fee {{ fee }}",
