--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -268,7 +268,7 @@
         "text_secondary_button": "Cancel",
         "form_label_year": "Year",
         "form_label_month": "Month",
-        "description": "Select for how long you want to lock up bitcoin in a fidelity bond."
+        "description": "Bond expiration date:"
       },
       "select_jar": {
         "text_primary_button": "Next",
@@ -324,9 +324,9 @@
         "title": "Are you sure you want to lock your funds?",
         "body": "Be aware that your funds can only be moved again when the fidelity bond expires on {{date}}"
       },
-      "title": "Long-term deposit with a Fidelity Bond",
+      "title": "Choose Deposit Duration",
       "title_fidelity_bond_exists": "Create another Fidelity Bond",
-      "subtitle": "You increase your chance to be chosen as a market maker in a collaborative transaction by locking up some funds for a certain amount of time. Be aware that your bitcoin can only be moved again when the bond is expired.",
+      "subtitle": "Your sats will be time-locked by the Bitcoin protocol. It is impossible to move them before the bond is expired.",
 
       "text_maker_running": "Earn is active. Stop the service in order to create a Fidelity Bond.",
       "text_coinjoin_already_running": "A collaborative transaction is currently in progress.",
