--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -302,7 +302,8 @@
         "text_secondary_button": "Cancel",
         "description": "You configured the fidelity bond as follows:",
         "label_lock_date": "Locked until",
-        "label_jar": "Jar #{{ jar }}",
+        "label_jar": "Jar",
+        "label_jar_n": "Jar #{{ jar }}",
         "label_amount": "Amount to be locked up",
         "label_address": "Funds will be locked up on this address",
         "label_selected_utxos": "UTXOs that will be locked up"
