--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -118,7 +118,7 @@
     "jar_tooltip": "Look inside",
     "jar_tooltip_empty_jar_0": "Receive",
     "jars_title": "Wallet distribution",
-    "jars_title_popover": "Todo: Description of what jars (mixdepths) are."
+    "jars_title_popover": "Jars are used to segregate your sats into multiple buckets that are disconnected from each other, which aids privacy."
   },
   "current_wallet_advanced": {
     "error_loading_utxos_failed": "Loading UTXOs failed.",
