--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -383,7 +383,7 @@
     "title": "Orderbook",
     "text_orderbook_summary": "{{ orderCount }} orders found by {{ counterpartyCount }} counterparties",
     "alert_empty_orderbook": "Orderbook is empty",
-    "error_loading_orderbook_failed": "Error while loading the orderbook. Your current local setup might not support fetching the orderbook.",
+    "error_loading_orderbook_failed": "Error while loading the orderbook. Your current local setup might not support fetching the orderbook. Reason: {{ reason }}",
     "text_offer_type_absolute": "absolute",
     "text_offer_type_relative": "relative",
     "table": {
