feat(settings): add link to jamdocs.org

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -160,6 +160,7 @@
     "button_create_wallet": "Create new wallet",
     "error_loading_seed_failed": "Could not retrieve seed phrase.",
     "seed_modal_info_text": "Please write down your seed phrase and password! Without this information you will not be able to access and recover your wallet!",
+    "documentation": "Documentation",
     "github": "GitHub",
     "telegram": "Telegram",
     "jm_twitter": "JoinMarket Twitter",
