--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -118,23 +118,7 @@
     "jar_tooltip": "Look inside",
     "jar_tooltip_empty_jar_0": "Receive",
     "jars_title": "Wallet distribution",
-    "jars_title_popover": "Jars are used to segregate your sats into multiple buckets that are disconnected from each other, which aids privacy."
-  },
-  "current_wallet_advanced": {
-    "error_loading_utxos_failed": "Loading UTXOs failed.",
-    "title_fidelity_bonds": "Fidelity Bonds",
-    "button_show_utxos": "Show UTXOs",
-    "button_hide_utxos": "Hide UTXOs",
-    "alert_no_utxos": "No UTXOs available.",
-    "account": "Jar",
-    "error_freeze_failed": "Request failed.",
-    "label_locked_until": "Locked until",
-    "label_frozen": "frozen",
-    "label_unconfirmed": "unconfirmed",
-    "button_freeze": "freeze",
-    "button_unfreeze": "unfreeze",
-    "account_button_send": "Send",
-    "account_button_receive": "Receive",
+    "jars_title_popover": "Jars are used to segregate your sats into multiple buckets that are disconnected from each other, which aids privacy.",
     "account_heading_external_addresses": "External addresses for deposits",
     "account_heading_internal_addresses": "Internal Addresses"
   },
